# example-plugin

./: .cruft.json  .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_parser_pyscf/parsers/: __init__.py  parser.py
src/nomad_parser_pyscf/schema_packages/: __init__.py  mypackage.py  schema.py  schema_package.py
src/nomad_parser_vasp/parsers/: __init__.py  parser.py
src/nomad_parser_vasp/schema_packages/: __init__.py  schema.py
tests/data/: example.out  test.archive.yaml
tests/parsers/: test_parser.py
tutorial/: tutorial.html
